--- a/index.html
+++ b/index.html
@@ -27,17 +27,16 @@
             <h3>Olá! Meu nome é Gabrielly da Costa</h3>
             <p> 
                 Sou formada no curso técnico Integrado em Internet das Coisas pelo IFES Serra. 
-                Atualmente, estou no primeiro período de Engenharia de Software na UNINTER.
+                Atualmente, curso Engenharia de Software na UNINTER.
             </p>
             
             <p>
                 Em minhas experiências profissionais, atuei como estagiária de Suporte de TI (2024 - 2025), 
-                onde pude aplicar e expandir meus conhecimentos técnicos. Também trabalhei como menor aprendiz na área administrativa (2021 - 2022), 
-                experiência que me ajudou a desenvolver habilidades organizacionais e de comunicação.
+                onde pude aplicar e expandir meus conhecimentos técnicos.
             </p>
 
             <p>
-                Sou uma pessoa comprometida, colaborativa e que valoriza o aprendizado contínuo, sempre buscando contribuir e colaborar.
+                Sou uma pessoa comprometida, colaborativa e que valoriza o aprendizado contínuo, sempre buscando contribuir e evoluir.
             </p>
         </section>
 
